# red-demo

./: CLAUDE.md  README.md  app.py  app_enhanced.py  app_enhanced_mmr.py  app_mmr.py  app_rec-reason.py  app_user-base_rec-reason.py  data_generator.py  evaluate_models.py  hello.py  pyproject.toml  recommender.py  recommender_mmr.py  recommender_mmr_model_alpha_0.4.pkl  recommender_model.pkl  requirements.txt  user_artist_plays.csv
configs/: model_configs.json
data/: user_artist_plays.csv
memo/: 推薦理由考察.md
models/: recommender.py  recommender_mmr.py
models/matrix_factorization/: music_recommender.py  music_recommender_legacy.py  music_recommender_mmr.py  music_recommender_mmr_legacy.py  user_based_recommender.py
results/: evaluation_results.csv
sandbox/: README.md  artist_embedding_visualizer.py  user_embedding_visualizer.py
src/evaluation/: config_loader.py  data_splitter.py  evaluator.py  metrics.py  model_param_manager.py  results_manager.py  serendipity_metrics.py
src/models/: base_recommender.py
weights/: recommender_model_alpha_0.6.pkl  user_artist_plays_mmr_alpha_0.4.pkl  user_artist_plays_mmr_alpha_1.3.pkl
